fixed tweet text overflowing out of box

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -15,6 +15,7 @@
   border-bottom-style: solid;
   border-bottom-color: grey;
   height: 50px;
+  overflow-wrap: break-word;
 }
 
 #tweet-text:focus {
